# Reconhecimento-Facial

./: pyproject.toml
