[tool.poetry]
name = "material-para-aula"
version = "0.1.0"
description = ""
authors = ["Cecilius Afonso Sousa do Carmo <ceciliusousa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
cmake = "^3.31.2"
dlib = "^19.24.6"
numpy = "^2.2.0"
mysql-connector = "^2.2.9"
python-dotenv = "^1.0.1"
opencv-python = "^4.10.0.84"
mysql-connector-python = "^9.1.0"
face-recognition = "^1.3.0"
face-recognition-models = "^0.3.0"
setuptools = "^75.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
